<resources>
    <string name="app_name">Game Suit Challenge</string>
    <string name="title">Gunting\nBatu\nKertas</string>
    <string name="com">COM</string>
    <string name="versus">VS</string>
    <string name="player">Player</string>
    <string name="draw">DRAW</string>
    <string name="win">Wins</string>
    <string name="com_win">COM Win</string>
    <string name="logo">Logo</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissor">Scissor</string>
    <string name="retry">Retry</string>
    <string name="splashscreen1">SplashScreen!</string>
    <string name="splashscreen2">SplashScreen2</string>
    <string name="text1">Bermain suit melawan</string>
    <string name="text2">sesama pemain.</string>
    <string name="text3">Komputer.</string>
    <string name="inputName">Masukkan Namamu di bawah</string>
    <string name="fieldEmpty">Tidak boleh kosong</string>
    <string name="pilih_lawanmu">pilih lawanmu</string>
    <string name="close">Close</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="kembali_ke_menu">Kembali ke menu</string>
    <string name="player2">Player 2</string>
    <string name="player2_win">Player 2 Win</string>

</resources>