<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_permainan"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/win"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_lagi"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintTop_toBottomOf="@id/tvResult"/>

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_menu"
        android:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintTop_toBottomOf="@id/btnRetry"/>

</androidx.constraintlayout.widget.ConstraintLayout>