<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context=".view.main.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/pilih_lawanmu"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMain1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/landing_page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:contentDescription="@string/player" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvVsPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMain1"
        tools:text="@string/player" />

    <TextView
        android:id="@+id/versus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvVsPlayer"
        app:layout_constraintStart_toEndOf="@id/tvPlayer"
        app:layout_constraintTop_toBottomOf="@id/tvPlayer"
        app:layout_constraintTop_toTopOf="@id/tvPlayer"/>

    <TextView
        android:id="@+id/tvVsPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPlayer"
        app:layout_constraintTop_toBottomOf="@id/ivMain1" />


    <ImageButton
        android:id="@+id/ivMain2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/landing_page2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versus"
        android:contentDescription="@string/com" />

    <TextView
        android:id="@+id/tvPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvVsPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMain2"
        tools:text="@string/player" />

    <TextView
        android:id="@+id/versus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvVsCpu"
        app:layout_constraintStart_toEndOf="@id/tvPlayer1"
        app:layout_constraintTop_toBottomOf="@id/tvPlayer1"
        app:layout_constraintTop_toTopOf="@id/tvPlayer1" />

    <TextView
        android:id="@+id/tvVsCpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPlayer1"
        app:layout_constraintTop_toBottomOf="@id/ivMain2" />

</androidx.constraintlayout.widget.ConstraintLayout>